# I3-SDK

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  spencer_c_sdk_proposal.md  spencer_observations.md  standards.md
I3MarketplaceDemo/: I3Marketplace.html  i3_arrays.js  marketplace.css  marketplace.js
build_all/: helper.cmake
build_helper/: cmake_header.cmake  codesourcery_toolchain.cmake  helper.cmake
clients/: README.md  airquality_sub.py  temperature_sub.py  test_plot.py  test_pub.py  test_sub.py
config/: i3_config.h
docs/: feature_request.md  issue-template.md  lacrime_sample.json  laweatherday_sample.json  pull_request.md  test_pub.py  test_tls_sub.py
docs/mqtt_scripts/: test_tls_pub.py  test_tls_sub.py
docs/sample_data/: laairquality_sample.json  lametrostop_sample.json  laweatherhour_sample.json  laxparking_sample.json
gateways/: client.py  i3_publisher.py  map_publisher.py  map_publisher_0.py
gateways/bacnet/: BACpypes.ini  bacnet_2_i3.py  bacnet_data.py  objectList.json  parser.py  publish_to_neptune.py  readAllObjects.py
gateways/i3clients/: Lax_mqtt_client  README.md  air_quality.py  crime.py  engineering_permits.py  metro_pub.py  mqtt_client.py  museums_pub.py  tommy_pub.py  traffic_incidents.py  twitter_publish.py  weather_pub.py
gateways/i3clients/getting_started/: test_sub.py
gateways/i3clients/html_subscribers/: graffiti_map.html  homeless_map.html
gateways/i3clients/main_map/: client_map.html  map_js.html  map_publsiher.py
gateways/i3clients/main_map/demo_subscriber/: arrays.js  client_map.js  client_map_0.js  client_map_1.js  client_map_2.js  client_map_3.js  client_map_demo.html  heatmap.js  heatmaps.html  parser.py  search_map.html  truck.js  tweepytest.py  twitter_log.txt
gateways/i3clients/service_requests/: bulky_items.py  dead_animal_removal.py  electronic_waste.py  feedback.py  graffiti_removal.py  homeless_encampment.py  illegal_dumping_pickup.py  metal_household_appliances.py  multiple_streetlight_issue.py  other_requests.py  report_water_waste.py  single_streetlight_issue.py
gateways/i3clients/service_requests/publisher/: service_rquests_publisher.py  sr_pub.py
gateways/i3clients/service_requests/subscribers/: arrays.js  arrays.py  map.html  map_arrays.js  map_locs.py  (+2 more)
gateways/i3clients/smartphone_sensors/: smartphone_map.html
getting_started/: README.md  config.ini  mqtt_test_websocket.html  pub.py  spencer_test_pub.py  spencer_test_sub.py  test_pub.py  test_sub.py  test_tls_pub.py  test_tls_sub.py
inc/: i3_client.h
sample_datasource/laAirQuality/: README.md  la_air_qlty_pub.py  la_air_qlty_sub.py
sample_datasource/laMetroStop6033/: README.md  la_metro_pub.py  la_metro_sub.py
sample_datasource/laWeatherDay/: README.md  la_weather_day_pub.py  lax_weather_day_sub.py
sample_datasource/laWeatherHour/: README.md  la_weather_hr_pub.py  la_weather_hr_sub.py
sample_datasource/lacrime/: README.md  lacrime_pub.py  lacrime_sub.py
sample_datasource/laxparking/: README.md  lax_pub.py  lax_sub.py
samples/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt  main.c
samples/publish/: CMakeLists.txt  main.c
samples/subscribe/: CMakeLists.txt  main.c
src/: i3_client.c
(+13 files in other folders)
